--- a/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
+++ b/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
@@ -233,7 +233,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -275,7 +276,8 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
@@ -3686,7 +3688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "my_env",
    "language": "python",
    "name": "python3"
   },
@@ -3700,7 +3702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
