--- a/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
+++ b/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1284,12 +1284,16 @@
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df.rename(columns={'blurb': \"description\",\n",
+    "                            'launched_at': \"launched_date\",\n",
+    "                            'deadline': \"end_date\"}, inplace=True)\n",
+    "campaign_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1473,12 +1477,17 @@
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n",
+    "campaign_df[\"goal\"]  = pd.to_numeric(campaign_df[\"goal\"])\n",
+    "campaign_df[\"goal\"]  = campaign_df[\"goal\"].astype(float)\n",
+    "campaign_df[\"pledged\"]  = pd.to_numeric(campaign_df[\"pledged\"])\n",
+    "campaign_df[\"pledged\"]  = campaign_df[\"pledged\"].astype(float)\n",
+    "campaign_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1510,12 +1519,13 @@
     }
    ],
    "source": [
-    "# Check the datatypes\n"
+    "# Check the datatypes\n",
+    "print(campaign_df.dtypes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1710,10 @@
    ],
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
-    "from datetime import datetime as dt\n"
+    "from datetime import datetime as dt\n",
+    "campaign_df[\"launched_date\"]  = pd.to_datetime(campaign_df[\"launched_date\"])\n",
+    "campaign_df[\"end_date\"]  = pd.to_datetime(campaign_df[\"end_date\"])\n",
+    "campaign_df"
    ]
   },
   {
