--- a/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
+++ b/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -2060,7 +2060,8 @@
    "source": [
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
-    "\n",
+    "campaign_merged_df = campaign_df.merge(category_df, on='category', how='right')\n",
+    "campaign_merged_df\n",
     "\n",
     "campaign_merged_df.tail(10)"
    ]
