--- a/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
+++ b/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2234,10 @@
     }
    ],
    "source": [
-    "# Drop unwanted columns\n"
+    "# Drop unwanted columns\n",
+    "campaign_cleaned = campaign_merged_df.drop(columns=[\"staff_pick\",\"spotlight\",\"category & sub-category\",\"category\",\"subcategory\"])\n",
+    "campaign_cleaned = campaign_cleaned[['cf_id', 'contact_id', 'company_name', 'description', 'goal', 'pledged', 'outcome', 'backers_count', 'country', 'currency', 'launched_date', 'end_date', 'category_id','subcategory_id' ]]\n",
+    "campaign_cleaned"
    ]
   },
   {
