--- a/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
+++ b/Starter_Files/ETL_Mini_Project_Starter_Code_SPawan_KRodriguez.ipynb
@@ -2955,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2975,7 +2975,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contact_info_df_copy.info()"
    ]
   },
   {
